--- a/Palindrome Checker/palindrome.html
+++ b/Palindrome Checker/palindrome.html
@@ -7,7 +7,8 @@
         <center><h1>Palindrome Checker</h1></center>
         <div class="content">           
             <p>Enter the string to check it is palindrome </p>
-            <input type="text" id="string"><br>
+            <input type="text" id="string">
+            <br>
        
             <button id="check" onclick="checkPalindrome()">Check</button>
         </div>      
